--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@codemirror/state": "^0.19.1",
     "@codemirror/stream-parser": "^0.19.1",
     "@codemirror/view": "^0.19.1",
+    "@octokit/rest": "^18.10.0",
     "@sindarius/gcodeviewer": "^2.1.12",
     "axios": "^0.21.1",
     "core-js": "^3.16.0",
